syntax = "proto3";
package com.thientdk.tms_inventory_service;
option java_multiple_files = true;
option java_package = "com.thientdk.tms_inventory_service.grpc";


service InventoryService {
  rpc CreateProduct(ProductRequestGrpc) returns (TextResponseGrpc);
  rpc GetProductById(IdRequestGrpc) returns (ProductResponseGrpc);
  rpc GetListProduct(ListProductRequestGrpc) returns (ProductResponseGrpc);
  rpc DeleteProductById(IdRequestGrpc) returns (TextResponseGrpc);
}

message ProductRequestGrpc {
  string name = 1;
  string description = 2;
  string price = 3;
  int32 stock = 4;
}

message ProductResponseGrpc {
  string id = 1;
  string name = 2;
  string description = 3;
  string price = 4;
  int32 stock = 5;
}

message SortGrpc {
  string property = 1;
  string direction = 2;
}

message  ListProductRequestGrpc {
  optional int32 page = 5;
  optional int32 size = 6;
  repeated SortGrpc sorts = 7;
}

message ListProductResponseGrpc {
  int64 total_elements = 1 ;
  int32 total_pages = 2;
  int32 size = 3;
  repeated ProductResponseGrpc content = 4;
  bool first = 5;
  bool last = 6;
  int32 number_of_elements = 7;
  bool empty = 8;
}

message IdRequestGrpc {
  string id = 1;
}

message TextResponseGrpc {
  string message = 1;
}